Supports eew.warning contract